--- a/template/404.html
+++ b/template/404.html
@@ -1,26 +1,40 @@
 <!DOCTYPE html>
 <html>
-    <head prefix="og:http://ogp.me/ns#">
+
+<head prefix="og:http://ogp.me/ns#">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>404 Not Found | Qman's Diary</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    <!-- Open Graph (OGP) Meta Tags -->
+    <meta property="og:title" content="404 Not Found | Qman's Diary">
+    <meta property="og:description" content="ページが見つかりませんでした。">
+    <meta property="og:url" content="https://blog.qmainconts.dev/404.html">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Qman's Diary">
+    <meta property="og:image" content="https://blog.qmainconts.dev/assets/icon_large.png">
+    <meta property="og:locale" content="ja_JP">
+    
+    <!-- Twitter Cards Meta Tags -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="404 Not Found | Qman's Diary">
+    <meta name="twitter:description" content="ページが見つかりませんでした。">
+    <meta name="twitter:url" content="https://blog.qmainconts.dev/404.html">
+    <meta name="twitter:site" content="@QmanEnobikto">
+    
+    <!-- その他 -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Play:wght@700&&family=Source+Code+Pro&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="/assets/css/destyle.css">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Play:wght@700&family=Source+Code+Pro&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/assets/css/reset.css">
     <link rel="stylesheet" href="/assets/css/common.css">
     <link rel="stylesheet" href="/assets/css/article.css">
     <script src="/assets/js/latest_articles.js"></script>
     <script src="/assets/js/categories.js"></script>
-    <meta property="og:title" content="404 Not Found | Qman's Diary">
-    <meta property="og:url" content="https://blog.qmainconts.dev/404.html">
-    <meta property="og:type" content="article">
-    <meta property="og:site_name" content="Qman's Diary">
     <meta name="google-site-verification" content="u0BTjFYkL3nKuJ0DyWuKngSx29oQe4lkzcAgTFfP2bQ" />
 </head>
+
 
 <body>
     <header>
